2006-08-29  Aaron Stone  <aaron@serendipity.cx>

	* check_dbmail_imapd.c, dm_imaputil.h, dm_imaputil.c:
	Handle RFC 2822 address list group syntax more correctly.

2006-08-27  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_imapd.c, check_dbmail_misc.c, dbmail-imapsession.c, 
	  dbmail-imapsession.h:
	minor changes in dbmail_imap_session_mailbox_open and
	dbmail_imap_session_mailbox_get_idnr
	* debian/control:
	fix debian/control

2006-08-22  Aaron Stone  <aaron@serendipity.cx>

	* lmtp.c:
	Added ? and ' to validchars (closes bug #400).

2006-08-21  Aaron Stone  <aaron@serendipity.cx>

	* contrib/startup-scripts/ubuntu/dbmail:
	Added Ubuntu startup script mysteriously posted to the wiki.

2006-08-20  Aaron Stone  <aaron@serendipity.cx>

	* db.h, db.c:
	Added function to count messages needing delete status.
	* maintenance.c:
	Call the new count function above.
	* debug.h, debug.c:
	Added __LINE__ to the newtrace function. Started adding more debugging
	information for TRACE macro calls.

2006-08-20  Paul J Stevens <paul@nfg.nl>

	* dbmail-imapsession.c:
	fix bug #392

2006-08-18  Paul J Stevens <paul@nfg.nl>

	* dbmail-imapsession.c:
	modify debug message after timeout in fgetc in build_imap_args_ext

2006-08-17  Paul J Stevens <paul@nfg.nl>

	* debian/changelog:
	fix bogus vc stuff in debian/changelog
	* check_dbmail_db.c:
	fix testcase after aaron changed mailbox_create_with_parents
	* dbmail-imapsession.c:
	minor changes in build_imap_args_ext to try get a grip on #392

2006-08-14  Aaron Stone  <aaron@serendipity.cx>

	* dbmailtypes.h, db.h, db.c:
	Added source argument to the db_create_mailbox_with_parents function
	to determine if permission checks should be skipped or not.
	* main.c, man/dbmail-smtp.txt:
	Added -M flag, like -m, but skip all permission checks and Sieve
	scripts (closes bug #391 and bug #393).
	* imapcommands.c, sort.c:
	Updated calls to the lower level mailbox creation and delivery
	functions with the additional source arguments.