@@ -503,7 +503,7 @@ u64_t auth_md5_validate(clientinfo_t *ci UNUSED, char *username,
 {
 	/* returns useridnr on OK, 0 on validation failed, -1 on error */
 	char *checkstring;
-	unsigned char *md5_apop_we;
+	char *md5_apop_we;
 	u64_t user_idnr;
 	const char *query_result;
 
@@ -549,7 +549,7 @@ u64_t auth_md5_validate(clientinfo_t *ci UNUSED, char *username,
 	      "%s,%s: validating md5_apop_we=[%s] md5_apop_he=[%s]",
 	      __FILE__, __func__, md5_apop_we, md5_apop_he);
 
-	if (strcmp((const char *)md5_apop_he, (const char *)md5_apop_we) == 0) {
+	if (strcmp(md5_apop_he, md5_apop_we) == 0) {
 		trace(TRACE_MESSAGE,
 		      "%s,%s: user [%s] is validated using APOP", __FILE__,
 		      __func__, username);
