@@ -2,6 +2,9 @@
 
 	* check_dbmail_imapd.c, dm_imaputil.h, dm_imaputil.c:
 	Handle RFC 2822 address list group syntax more correctly.
+	* modules/authsql.c, pipe.c, dbmail-message.c, dm_md5.c,
+	dbmail-imapsession.c, misc.c:
+	Silenced signedness warning (closes bug #397).
 
 2006-08-27  Paul J Stevens <paul@nfg.nl>
 
